--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,6 @@ import SkillProgress from "../components/SkillProgress.astro";
 					<PresentationCard />
 				</div>
 				<section id="tech-stack">
-					<h2 style="text-align: center;">Tech Stack</h2>
 					<TechGrid title="Languages">
 						<SkillProgress
 							src="/icons/java-svgrepo-com.svg"
@@ -215,8 +214,8 @@ import SkillProgress from "../components/SkillProgress.astro";
 		border-radius: 8px;
 		padding: 2rem;
 		background: transparent;
-		position: relative; /* Ensure content is in a positioning context */
-		z-index: 2; /* Above both background layers */
+		position: relative;
+		z-index: 2;
 	}
 
 	.slice {
