--- a/src/components/PresentationCard.astro
+++ b/src/components/PresentationCard.astro
@@ -8,7 +8,7 @@ import TechGrid from "./TechGrid.astro";
     <div>
         <div class="presentation">
             <h1>
-                Hi, I'm <span class="highlight">Matias</span>, <br />a <span
+                Hi, I'm <span class="highlight">Matias</span>, <br /><span
                     class="highlight">Web Developer</span
                 >
                 <br />
