--- a/src/components/SkillProgress.astro
+++ b/src/components/SkillProgress.astro
@@ -18,3 +18,15 @@ const { src, progress = 0, title = "Title", loading = false } = Astro.props;
         )
     }
 </div>
+
+<style>
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    progress {
+        width: 140px;
+    }
+</style>
