--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ import ProjectGrid from "../components/ProjectGrid.astro";
 import CarouselItem from "../components/CarouselItem.astro";
 import Carousel from "../components/Carousel.astro";
 import SkillProgress from "../components/SkillProgress.astro";
+import RepoLangs from "../components/RepoLangs.astro";
 ---
 
 <!doctype html>
@@ -39,6 +40,7 @@ import SkillProgress from "../components/SkillProgress.astro";
 				>
 					<PresentationCard />
 				</div>
+
 				<section id="tech-stack">
 					<TechGrid title="Languages">
 						<SkillProgress
@@ -148,7 +150,7 @@ import SkillProgress from "../components/SkillProgress.astro";
 				<section>
 					<section>
 						<h2>Other Projects</h2>
-						<Carousel>
+						<Carousel items="7">
 							<CarouselItem
 								title="CHIP-8 Emulator"
 								href="https://github.com/Garkatron/Von-Neumann-Simulator"
@@ -203,7 +205,7 @@ import SkillProgress from "../components/SkillProgress.astro";
 
 					<section>
 						<h2>Minecraft mods</h2>
-						<Carousel>
+						<Carousel items="5">
 							<CarouselItem
 								title="BTA PainScale"
 								href="https://github.com/Garkatron/BTA-PainScale"
