--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -279,27 +279,31 @@ import RepoLangs from "../components/RepoLangs.astro";
 
 			body {
 				background-color: #1b1b1b;
+				background-image: url("/bg/topography.svg");
+				background-repeat: repeat;
+				position: relative;
+			}
+			body::before {
+				content: "";
+				position: absolute;
 				background-image: url("/bg/olas10.svg");
 				background-size: cover;
 				background-repeat: no-repeat;
 				background-position: center;
-				position: relative;
-			}
-
-			body::before {
-				content: "";
-				position: absolute;
+				z-index: -1;
 				top: 0;
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-image: url("/bg/topography.svg");
-				background-repeat: repeat;
-				background-size: 1000px;
-				opacity: 0.25;
-				z-index: -1;
+				opacity: 0.35;
 				pointer-events: none;
 			}
+
+			/*body::before {
+				
+				
+				pointer-events: none;
+			}*/
 
 			html {
 				background-color: transparent;
